--- a/pet-profile-page.html
+++ b/pet-profile-page.html
@@ -11,5 +11,9 @@
     <p>Petname: Bobo</p>
     <p>Type: Dog</p>
     <p>Age: 4</p>
+    <h3>Pet_2</h3>
+    <p>Petname: khaotom</p>
+    <p>Type: Cat</p>
+    <p>Age: 4</p>
 </body>
 </html>
